styles.css
body {
    display: flex;
   flex-direction: column;
   height: 100vh;
}

.logo {
    font-size: 24px;
    margin-right: auto;
    color: #F9FAF8;
}

h2 {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
    margin: 0;
}

.headerlink,
p {
    font-size: 18px;
    color: #e5e7eb;
    margin: 0px;
}

.header {
    display: flex;
    align-items: center;
    gap: 18px;
    background-color: #1F2937;
    padding-left: 160px;
    padding-right: 160px;
}
.sheader {
    display: flex;
    gap: 30px;
    background-color: #1F2937;
    padding-left: 160px;
    padding-right: 160px;
    padding-top: 80px;
    padding-bottom: 80px;
    justify-content: space-between;
    flex: 0 1 0;
    align-items: flex-start;
    

}

.sheader1 {
    display: flex;
    flex-direction: column;
    flex: 1 1 0;
    gap: 10px;
    
}

.mainphoto {
    width: 400px;
    height: auto;
    flex-basis: auto;
    flex: 1 1 0;
}

.signup {
    width: fit-content;
    font-size: 18px;
    color: #f9faf8;
    margin: 0px;
    background-color: #3882f6;
    padding: 25px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 10px;  
}

h3 {
    text-align: center;
    margin: 0px;
    padding: 40px;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
}

.cardholder {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin: 0px;
    
}

.resimage {
    width: 130px;
    height: auto;
    border-radius: 20%;
}
.imagewrap {
    display: flex;
    flex-direction: column;
}

.cardholder p 
{
    color: black;
    height: auto;
    
    text-align: center;
    
}
.imagewrap1,
.imagewrap2,
.imagewrap3,
.imagewrap4 {
    flex: 1;
    
    
}

